fix header spacing

--- a/src/components/Nav/styles.module.scss
+++ b/src/components/Nav/styles.module.scss
@@ -67,7 +67,7 @@
       grid-template-rows: min-content 2fr;
       min-height: 350px;
       height: 100%;
-      padding: var(--spacing-xs) var(--spacing-md);
+      padding: var(--spacing-xs) 1.25rem;
     }
   }
 }
@@ -116,7 +116,7 @@
     width: 100%;
     display: flex;
     justify-content: space-between;
-    padding: var(--spacing-xs) var(--spacing-md);
+    padding: var(--spacing-xs) 1.25rem;
   }
 
   @media (min-width: $breakpoint-tablet) {
